--- a/PhotoBooth/TakePhotoWindow.ui
+++ b/PhotoBooth/TakePhotoWindow.ui
@@ -1,23 +1,33 @@
-<UI version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>QTakePhotoWindow</class>
- <widget class="QWidget" name="QTakePhotoWindow" >
-  <property name="objectName" >
-   <string notr="true">QTakePhotoWindow</string>
-  </property>
-  <property name="geometry" >
+ <widget class="QWidget" name="QTakePhotoWindow">
+  <property name="geometry">
    <rect>
-	<x>0</x>
-	<y>0</y>
-	<width>400</width>
-	<height>300</height>
+    <x>0</x>
+    <y>0</y>
+    <width>1110</width>
+    <height>905</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>QTakePhotoWindow</string>
-  </property>  
+  </property>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>184</x>
+     <y>350</y>
+     <width>461</width>
+     <height>111</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>OK</string>
+   </property>
+  </widget>
  </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
+ <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
-</UI>
+</ui>
