adding video to welcome screen

--- a/PhotoBooth/mainwindow.ui
+++ b/PhotoBooth/mainwindow.ui
@@ -34,7 +34,20 @@
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
-     <layout class="QHBoxLayout" name="mainFrameLayout"/>
+     <layout class="QHBoxLayout" name="mainFrameLayout">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+     </layout>
     </widget>
    </item>
   </layout>
